--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -8,8 +8,12 @@ on:
 jobs:
     update-stats:
         runs-on: ubuntu-latest
+        permissions:
+            contents: write
         steps:
             - uses: actions/checkout@v3
+              with:
+                  token: ${{ secrets.GITHUB_TOKEN }}
 
             - name: Setup Python
               uses: actions/setup-python@v4
@@ -32,3 +36,5 @@ jobs:
                   git add .
                   git diff --staged --quiet || git commit -m "Update WakaTime stats"
                   git push
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
